--- a/css/main.scss
+++ b/css/main.scss
@@ -9,13 +9,27 @@ h1, h2, h3, h4, p {
   padding: 0;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 14px;
+  font-size: 1.4rem;
+}
+
+h1 {
+  font-size: 24px;
+  font-size: 2.4rem;
+}
+
 a {
   display: inline-block;
 }
 
 %container {
-  max-width: 1200px;
-  padding: 0 20px;
+  max-width: 960px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -25,13 +39,19 @@ body {
   color: #ffffff;
 }
 
+.button {
+  padding: 10px 40px;
+  background: #0CA074;
+  border-radius: 86px;
+}
+
 .nav {
   @extend %container;
   margin-top: 42px;
   position: sticky;
   top: 0;
   z-index: 1000;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   background: linear-gradient(180deg, rgba(53, 57, 71, 0.3) 0%, rgba(76, 80, 96, 0.3) 100%);
   border: 1px solid rgba(52, 56, 70, 0.5);
   border-radius: 89px;
@@ -56,9 +76,14 @@ body {
 }
 
 .header {
-  @extend %container;
   position: relative;
   bottom: -100px;
+  background: url("../img/Rectangle 11.png") center center/cover;
+
+  .headerr {
+    @extend %container;
+
+  }
 
   &-content {
     padding-top: 200px;
@@ -66,7 +91,7 @@ body {
 
   h1 {
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 3.6rem;
   }
 
   p {
@@ -77,7 +102,7 @@ body {
 
   a {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 153.69%;
   }
 
@@ -109,15 +134,14 @@ body {
   font-weight: 500;
 
   h2 {
-    font-size: 2rem;
+    font-size: 3.6rem;
     line-height: 153.69%;
   }
 
   p {
     margin-top: 10px;
     font-weight: 300;
-    font-size: 18px;
-    line-height: 35px;
+    font-size: 1.8rem;
   }
 
 
@@ -128,7 +152,7 @@ body {
 
     p {
       color: #5A5F73;
-      font-size: 24px;
+      font-size: 2.4rem;
       line-height: 128.19%;
       font-weight: 500;
     }
@@ -137,7 +161,11 @@ body {
 
 
 .economy {
-  @extend %container;
+  background: url("../img/Rectangle 11.png") center center/cover;
+
+  .economyy {
+    @extend %container;
+  }
 
   &-content {
     width: 50%;
@@ -145,14 +173,13 @@ body {
 
     h2 {
       font-weight: 500;
-      font-size: 34px;
+      font-size: 3.4rem;
       line-height: 153.69%;
     }
 
     p {
       font-weight: 300;
-      font-size: 18px;
-      line-height: 35px;
+      font-size: 1.8rem;
     }
   }
 
@@ -169,7 +196,7 @@ body {
 
   .watermark {
     font-weight: 900;
-    font-size: 15rem;
+    font-size: 23rem;
     line-height: 128.19%;
     text-align: center;
     color: rgba(19, 20, 22, 0.4);
@@ -183,18 +210,17 @@ body {
   font-weight: 500;
 
   h2 {
-    font-size: 2rem;
+    font-size: 3.6rem;
     line-height: 153.69%;
   }
 
   p {
     font-weight: 300;
-    font-size: 18px;
-    line-height: 35px;
+    font-size: 1.6rem;
   }
 
   h3 {
-    font-size: 24px;
+    font-size: 2.4rem;
     line-height: 128.19%;
   }
 
@@ -204,24 +230,27 @@ body {
 }
 
 .no-worries {
-  @extend %container;
   font-weight: 500;
   padding: 300px 0;
   background: url("../img/image 13.png") no-repeat;
 
+  .no-worreiss {
+    @extend %container;
+  }
+
   h2 {
-    font-size: 2rem;
+    font-size: 3.6rem;
     line-height: 153.69%;
   }
 
   span {
-    font-size: 24px;
+    font-size: 2.4rem;
     line-height: 128.19%;
     color: #F9B133;
   }
 
   p {
-    font-size: 24px;
+    font-size: 2.4rem;
   }
 }
 
@@ -234,17 +263,18 @@ body {
 
     img {
       width: 80px;
+      margin-bottom: 30px;
     }
 
     h3 {
       font-weight: 500;
-      font-size: 1.4rem;
+      font-size: 2.4rem;
       color: #ACB0C1;
     }
 
     p {
       font-weight: 300;
-      font-size: .8rem;
+      font-size: 1.8rem;
       color: #747D9F;
     }
 
@@ -268,12 +298,12 @@ body {
 
 
   &-content {
-    font-size: 1.8rem;
+    font-size: 4.8rem;
     color: #ACB0C1;
 
     h4 {
       font-weight: 500;
-      font-size: 1.5rem;
+      font-size: 3.6rem;
       text-align: center;
       color: #7D839B;
     }
@@ -329,13 +359,15 @@ body {
     text-align: center;
   }
 
+  font-size: 1.8rem;
+
   h2 {
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 3.6rem;
   }
 
   h4 {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
   }
 
   .img {
@@ -413,7 +445,7 @@ body {
   }
 
   .input {
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 500;
     background: transparent;
     outline: none;
@@ -436,7 +468,7 @@ body {
 
     &-wrapper {
       width: 30%;
-      font-size: .8rem;
+      font-size: 1.4rem;
     }
   }
 
@@ -542,20 +574,24 @@ body {
   padding: 200px 0;
 
   h2 {
-    font-size: 2rem;
+    font-size: 3.6rem;
     font-weight: 500;
   }
 
   .questions {
-    width: 80%;
+    width: 90%;
 
     &-item {
       padding: 15px;
-      border: 2px solid #F9B133;
       box-sizing: border-box;
       /* glow */
+      border: 1px solid rgba(255, 255, 255, 0.3);
       filter: drop-shadow(0px 0px 25px rgba(249, 177, 51, 0.3));
       border-radius: 10px;
+
+      &.opened {
+        border: 2px solid #F9B133;
+      }
 
       &__title {
         &-question {
@@ -565,6 +601,7 @@ body {
         .open-wrapper {
           width: 2%;
           position: relative;
+          cursor: pointer;
         }
 
         .open::after {
@@ -585,13 +622,13 @@ body {
 
         p {
           font-weight: 500;
-          font-size: 1.2rem;
+          font-size: 1.8rem;
           text-align: center;
         }
       }
 
       &__text {
-        font-size: .8rem;
+        font-size: 1.8rem;
         font-weight: 300;
       }
     }
@@ -601,7 +638,7 @@ body {
 .footer {
   @extend %container;
   padding-bottom: 50px;
-  font-size: 1rem;
+  font-size: 1.8rem;
   font-weight: 300;
 
   .copyrigt {
@@ -611,5 +648,383 @@ body {
   a {
     color: #37ABFF;
   }
+
+}
+
+
+@media (max-width: 1024px) {
+
+
+  .header {
+    background: url("../img/Rectangle 11.png") center center/cover;
+    position: static;;
+
+    &-content {
+      padding-top: 200px;
+    }
+
+    .mobile-img {
+      height: 40vh;
+      margin-top: 40px;
+
+      &__header-bg-1 {
+        width: 90%;
+        background: url('../img/R12 1.png') top center/cover;
+        //margin-top: 100px;
+      }
+
+      &__header-bg-2 {
+        width: 90%;
+        background: url('../img/R12B 1.png') top -3vh center/cover;
+      }
+    }
+  }
+
+  .interiors {
+    &-content {
+      padding: 0 30px;
+      padding-bottom: 70px;
+    }
+
+    background: #ffffff;
+  }
+
+
+  .economy {
+    padding-top: 70px;
+    padding-bottom: 120px;
+
+    &-content {
+      width: 100%;
+      padding-top: 0;
+
+      h2 {
+        font-size: 3rem;
+      }
+    }
+  }
+
+  .gentle {
+    h2 {
+      font-size: 3.6rem;
+    }
+
+    p {
+      font-weight: 300;
+    }
+
+    h3 {
+      font-size: 2.4rem;
+    }
+
+    &-change-line {
+      margin-top: 0;
+    }
+  }
+
+  .no-worries {
+    padding: 100px 0 300px;
+    background: url("../img/image 13.png") bottom/600px no-repeat;
+    text-align: center;
+
+    h2 {
+      font-size: 3.6rem;
+      line-height: 153.69%;
+    }
+
+    span {
+      font-size: 2.4rem;
+      line-height: 128.19%;
+      color: #F9B133;
+    }
+
+    p {
+      font-size: 2.4rem;
+    }
+  }
+
+  .specifications {
+    .features {
+      position: relative;
+      top: -10px;
+
+      img {
+        width: 80px;
+      }
+
+      .feature__item {
+        &:hover {
+          top: 0;
+        }
+      }
+    }
+
+    &-content {
+      font-size: 2.4rem;
+      padding-top: 90px;
+      padding-bottom: 70px;
+    }
+  }
+
+  .gallery {
+    display: none;
+  }
+
+  .form-section {
+
+    .mobile {
+      .total {
+        font-size: 2.4rem;
+        font-weight: 500;
+      }
+    }
+
+    .form-box {
+      margin: 0 auto;
+      width: 95%;
+      background: #3A3D49;
+      border-radius: 50px;
+      padding: 80px 30px 60px;
+      text-align: center;
+    }
+
+    font-size: 1.8rem;
+
+    h2 {
+      font-weight: 500;
+      font-size: 3.6rem;
+    }
+
+    h4 {
+      font-size: 1.8rem;
+    }
+
+    .img {
+      width: 90%;
+    }
+
+    .counter {
+      border: 2px solid #FFFFFF;
+      border-radius: 86px;
+      margin: 0 auto;
+      padding: 10px;
+    }
+
+    .counter input {
+      background: transparent;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      text-align: center;
+
+    }
+
+    .counter input::-webkit-outer-spin-button,
+    .counter input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    .counter input[type=number] {
+      -moz-appearance: textfield;
+    }
+
+    .switch {
+      filter: drop-shadow(0px 0px 25px rgba(249, 177, 51, 0.3));
+      cursor: pointer;
+    }
+
+    .relative-block {
+      position: relative;
+    }
+
+    .absolute-block {
+      position: absolute;
+    }
+
+    .black-img {
+      top: -50px;
+    }
+
+    .white-img {
+      z-index: 2;
+    }
+
+    .button {
+      color: #ffffff;
+      border-radius: 86px;
+      padding: 15px 120px;
+    }
+
+    .button:hover {
+      color: #ffffff;
+    }
+
+    .button-next {
+      background: #0CA074;
+    }
+
+    .button-prev {
+      background: #2C2D33;
+    }
+
+    .buttons {
+      margin-top: 90px;
+    }
+
+    .input {
+      font-size: 1.8rem;
+      font-weight: 500;
+      background: transparent;
+      outline: none;
+      border: none;
+      color: #ffffff;
+      text-align: left;
+      border-bottom: 1px solid #ffffff;
+      width: 30%;
+    }
+
+    form .row {
+      margin-top: 30px;
+    }
+
+    .switcher {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+
+      &-wrapper {
+        width: 30%;
+        font-size: 1.4rem;
+      }
+    }
+
+    .switcher.radio {
+      width: 0;
+      height: 24px;
+    }
+
+    /* Hide default HTML checkbox */
+    .switcher input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #292B33;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 16px;
+      width: 16px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    input.checkbox:checked .slider {
+      background-color: #F9B134;
+    }
+
+    input.checkbox:focus .slider {
+      box-shadow: 0 0 1px #F9B134;
+    }
+
+    input.checkbox:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+      background-color: #F9B134;
+    }
+
+    .slider.round {
+      border-radius: 34px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
+
+    .white-panel {
+      position: relative;
+      bottom: -90px;
+    }
+
+    input.radio:checked .slider {
+      background-color: #F9B134;
+    }
+
+    input.radio:focus .slider {
+      box-shadow: 0 0 1px #F9B134;
+    }
+
+    input.radio:checked + .slider:before {
+      -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+      transform: translateX(0);
+      background-color: #F9B134;
+    }
+
+    .payment-method__img {
+      cursor: pointer;
+    }
+
+    form {
+      p {
+        color: #757780;
+      }
+    }
+
+    .form-box-3 {
+      .panel__img.first {
+        position: relative;
+        bottom: -100px;
+      }
+    }
+  }
+
+
+  .faq {
+    padding: 200px 15px;
+
+    .questions {
+      width: 100%;
+
+      &-item {
+
+        &__title {
+          &-question {
+            width: 100%;
+            margin-bottom: 10px;
+          }
+
+          p {
+            text-align: left;
+          }
+        }
+
+        &__text {
+          font-size: 1.8rem;
+          font-weight: 300;
+        }
+      }
+    }
+  }
+
 
 }
