--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ html {
 body {
   font-size: 14px;
   font-size: 1.4rem;
+  width: 100%;
 }
 
 h1 {
@@ -189,7 +190,7 @@ body {
 .no-worries {
   font-weight: 500;
   padding: 300px 0;
-  background: url("../img/image 13.png") no-repeat;
+  background: url("../img/image 13.png") center/cover no-repeat;
 }
 .no-worries h2 {
   font-size: 3.6rem;
@@ -277,6 +278,8 @@ body {
 }
 
 .form-section {
+  position: relative;
+  top: -40px;
   font-size: 1.8rem;
   /* Firefox */
   /* Hide default HTML checkbox */
@@ -353,6 +356,9 @@ body {
 .form-section .buttons {
   margin-top: 90px;
 }
+.form-section .input-wrapper {
+  width: 30%;
+}
 .form-section .input {
   font-size: 1.8rem;
   font-weight: 500;
@@ -362,7 +368,7 @@ body {
   color: #ffffff;
   text-align: left;
   border-bottom: 1px solid #ffffff;
-  width: 30%;
+  width: 100%;
 }
 .form-section form .row {
   margin-top: 30px;
@@ -446,6 +452,9 @@ body {
   cursor: pointer;
 }
 .form-section form p {
+  color: #757780;
+}
+.form-section .gr {
   color: #757780;
 }
 .form-section .form-box-3 .panel__img.first {
@@ -610,6 +619,8 @@ body {
   }
 
   .form-section {
+    position: static;
+    padding-top: 30px;
     font-size: 1.8rem;
     /* Firefox */
     /* Hide default HTML checkbox */
@@ -617,14 +628,6 @@ body {
   .form-section .mobile .total {
     font-size: 2.4rem;
     font-weight: 500;
-  }
-  .form-section .form-box {
-    margin: 0 auto;
-    width: 95%;
-    background: #3A3D49;
-    border-radius: 50px;
-    padding: 80px 30px 60px;
-    text-align: center;
   }
   .form-section h2 {
     font-weight: 500;
@@ -690,16 +693,21 @@ body {
   .form-section .buttons {
     margin-top: 90px;
   }
+  .form-section .input-wrapper {
+    width: 100%;
+    margin-top: 20px;
+  }
   .form-section .input {
     font-size: 1.8rem;
     font-weight: 500;
     background: transparent;
     outline: none;
-    border: none;
     color: #ffffff;
     text-align: left;
-    border-bottom: 1px solid #ffffff;
-    width: 30%;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 86px;
+    padding: 10px 30px;
   }
   .form-section form .row {
     margin-top: 30px;
@@ -711,8 +719,9 @@ body {
     height: 24px;
   }
   .form-section .switcher-wrapper {
-    width: 30%;
     font-size: 1.4rem;
+    margin: 20px 0;
+    width: 100%;
   }
   .form-section .switcher.radio {
     width: 0;
@@ -739,7 +748,6 @@ body {
     content: "";
     height: 16px;
     width: 16px;
-    left: 4px;
     bottom: 4px;
     background-color: white;
     -webkit-transition: 0.4s;
@@ -780,7 +788,19 @@ body {
     background-color: #F9B134;
   }
   .form-section .payment-method__img {
+    border: 2px solid #757780;
+    box-sizing: border-box;
+    border-radius: 16px;
+    padding: 30px 20px;
+  }
+  .form-section .payment-method__img.active {
+    border-color: #F9B134;
+  }
+  .form-section .payment-method__img {
     cursor: pointer;
+  }
+  .form-section .switcher.radio {
+    display: none;
   }
   .form-section form p {
     color: #757780;
@@ -788,6 +808,15 @@ body {
   .form-section .form-box-3 .panel__img.first {
     position: relative;
     bottom: -100px;
+  }
+  .form-section .mobile-img {
+    position: relative;
+  }
+  .form-section .mobile-img.white {
+    left: -10%;
+  }
+  .form-section .mobile-img.black {
+    right: -10%;
   }
 
   .faq {
@@ -806,6 +835,37 @@ body {
   .faq .questions-item__text {
     font-size: 1.8rem;
     font-weight: 300;
+  }
+
+  .nav-mobile .topnav {
+    padding: 0 15px;
+    overflow: hidden;
+    background-color: #282B34;
+    position: relative;
+  }
+  .nav-mobile #myLinks {
+    display: none;
+    background-color: #282B34;
+    font-size: 1.8rem;
+    padding: 0 15px;
+  }
+  .nav-mobile #myLinks a {
+    margin: 10px 0;
+  }
+  .nav-mobile .topnav a {
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .nav-mobile .topnav a.icon {
+    display: block;
+    position: static;
+    left: 0;
+    top: 0;
+  }
+  .nav-mobile .active {
+    background: #282B34;
+    color: white;
   }
 }
 
