--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,6 @@ body {
 }
 
 
-
 .nav {
   @extend %container;
   margin-top: 42px;
@@ -151,14 +150,25 @@ body {
   .features {
     div {
       padding: 10px;
+
+      p {
+        color: #ACB0C1;
+        font-size: 2.4rem;
+        line-height: 128.19%;
+        font-weight: 500;
+      }
+
+      &:hover img {
+        border: 1px solid #F9B133;
+        border-radius: 20px;
+      }
+
+      &:hover p {
+        color: #5A5F73;
+      }
     }
 
-    p {
-      color: #5A5F73;
-      font-size: 2.4rem;
-      line-height: 128.19%;
-      font-weight: 500;
-    }
+
   }
 }
 
@@ -303,7 +313,8 @@ body {
 
 
   &-content {
-    font-size: 4.8rem;
+    //font-size: 4.8rem;
+    font-size: 3.6rem;
     color: #ACB0C1;
 
     h4 {
@@ -782,7 +793,9 @@ body {
   }
 
   .gallery {
-    display: none;
+    .grid-container {
+      display: flex;
+    }
   }
 
   .form-section {
@@ -1073,11 +1086,16 @@ body {
 
 
   .nav-mobile {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+
     .topnav {
       padding: 0 15px;
       overflow: hidden;
       background-color: #282B34;
       position: relative;
+      max-height: 50px;
     }
 
     #myLinks {
@@ -1085,8 +1103,9 @@ body {
       background-color: #282B34;
       font-size: 1.8rem;
       padding: 0 15px;
-      a{
-        margin: 10px 0 ;
+
+      a {
+        margin: 10px 0;
       }
     }
 
