--- a/css/main.scss
+++ b/css/main.scss
@@ -1128,3 +1128,27 @@ body {
     }
   }
 }
+
+
+.icv__arrow-wrapper {
+  display: none !important;
+}
+
+.icv {
+  overflow: visible !important;
+}
+
+.icv__circle {
+  position: absolute !important;
+  bottom: -35px !important;
+  width: 40px !important;
+  height: 40px !important;
+  background: #F9B133 !important;
+  border: 6px solid #FFFFFF !important;
+  box-shadow: 0px 0px 25px rgba(249, 177, 51, 0.3) !important;
+  z-index: 1000;
+}
+
+.icv__control {
+  height: calc(100% + 35px) !important;
+}
