--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ a {
   display: inline-block;
 }
 
-.footer, .faq, .no-worries .no-worreiss, .gentle, .economy .economyy, .interiors-content, .header .headerr, .nav {
+.policy, .footer, .faq, .specifications .specificationss, .no-worries .no-worreiss, .gentle .gentlee, .economy .economyy, .interiors-content, .header .headerr, .nav {
   max-width: 960px;
   padding: 0 15px;
   margin: 0 auto;
@@ -107,14 +107,13 @@ body {
 
 .interiors {
   padding-top: 100px;
-  background: url("../img/Rectangle 2.png") top center/cover;
+  background: url("../img/Rectangle 2.png") top center no-repeat;
   position: relative;
   color: #7D839B;
   font-weight: 500;
 }
 .interiors-content {
-  padding: 0 50px;
-  padding-bottom: 70px;
+  padding: 70px 50px;
 }
 .interiors h2 {
   font-size: 3.6rem;
@@ -176,7 +175,11 @@ body {
 }
 
 .gentle {
+  background: url("../img/Rectangle 11.png") center center/cover;
   font-weight: 500;
+}
+.gentle .gentlee {
+  padding-top: 100px;
 }
 .gentle h2 {
   font-size: 3.6rem;
@@ -192,6 +195,69 @@ body {
 }
 .gentle-change-line {
   margin-top: 119px;
+}
+
+.image-slider {
+  position: relative;
+  display: inline-block;
+}
+
+.image-slider > div {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  overflow: hidden;
+}
+
+.image-slider img {
+  display: block;
+  user-select: none;
+  box-sizing: border-box;
+}
+
+.image-slider input {
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: -10%;
+  bottom: 10px;
+  height: 100%;
+  width: 120%;
+  background: transparent;
+}
+
+.image-slider input::before {
+  content: "";
+  height: 100%;
+  width: 5px;
+  background: white;
+}
+
+input[type=range],
+input[type=range]::-webkit-slider-runnable-track,
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  width: 1.5em;
+  height: 1.5em;
+  border: 4px solid #c54895;
+  border-radius: 100%;
+  /* background: #5a308d;*/
+  background: radial-gradient(circle, #812D88 90%, #ED94CA 90%);
+  background-blend-mode: overlay;
+  padding: 3.5em 3.4em;
+  cursor: ew-resize;
+  /* box-shadow: inset 0 -2px 5px rgba(200, 79, 153, 0.5);*/
+}
+
+#top-image {
+  border-right: 4px solid #E7489F;
+  /* box-shadow: inset -2px -2px 5px rgba(200, 79, 153, 0.5), 2px 0 5px rgba(200, 79, 153, 0.5); */
+  /* transition: width 0.1s; */
 }
 
 .no-worries {
@@ -247,6 +313,13 @@ body {
 .specifications .features .feature__item:hover h3 {
   color: #7D839B;
 }
+.specifications .features .feature__item:hover .large {
+  display: none;
+}
+.specifications .features .feature__item:hover .mobile {
+  transform: scale(1.5);
+  display: block;
+}
 .specifications-content {
   font-size: 3.6rem;
   color: #ACB0C1;
@@ -256,6 +329,30 @@ body {
   font-size: 3.6rem;
   text-align: center;
   color: #7D839B;
+}
+.specifications-content__table {
+  padding-bottom: 100px;
+}
+.specifications-content__table ul.leaders {
+  max-width: 40em;
+  padding: 0;
+  overflow-x: hidden;
+  list-style: none;
+}
+.specifications-content__table ul.leaders li:before {
+  float: left;
+  width: 0;
+  white-space: nowrap;
+  content: ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . ";
+}
+.specifications-content__table ul.leaders span:first-child {
+  padding-right: 0.33em;
+  background: white;
+}
+.specifications-content__table ul.leaders span + span {
+  float: right;
+  padding-left: 0.33em;
+  background: white;
 }
 
 .gallery .grid-container {
@@ -535,7 +632,6 @@ body {
 
 @media (max-width: 1024px) {
   .header {
-    background: url("../img/Rectangle 11.png") center center/cover;
     position: static;
   }
   .header-content {
@@ -610,7 +706,7 @@ body {
     top: -10px;
   }
   .specifications .features img {
-    width: 80px;
+    width: 40%;
   }
   .specifications .features .feature__item:hover {
     top: 0;
@@ -620,9 +716,33 @@ body {
     padding-top: 90px;
     padding-bottom: 70px;
   }
+  .specifications-content__table ul.leaders {
+    max-width: 40em;
+    padding: 0;
+    overflow-x: hidden;
+    list-style: none;
+  }
+  .specifications-content__table ul.leaders li:before {
+    display: none;
+  }
+  .specifications-content__table ul.leaders span:first-child {
+    padding-right: 0.33em;
+    background: white;
+  }
+  .specifications-content__table ul.leaders span + span {
+    float: right;
+    padding-left: 0.33em;
+    background: white;
+  }
 
   .gallery .grid-container {
     display: flex;
+    height: 320px;
+  }
+  .gallery img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
   }
 
   .form-section {
@@ -881,6 +1001,11 @@ body {
     color: white;
   }
 }
+@media (max-width: 380px) {
+  .specifications-content__table {
+    font-size: 2rem;
+  }
+}
 .icv__arrow-wrapper {
   display: none !important;
 }
@@ -902,6 +1027,13 @@ body {
 
 .icv__control {
   height: calc(100% + 35px) !important;
+}
+
+.policy {
+  padding-top: 100px;
+}
+.policy p {
+  margin: 3rem 0;
 }
 
 /*# sourceMappingURL=main.css.map */
