--- a/css/main.scss
+++ b/css/main.scss
@@ -125,12 +125,11 @@ body {
 .interiors {
   &-content {
     @extend %container;
-    padding: 0 50px;
-    padding-bottom: 70px;
+    padding: 70px 50px;
   }
 
   padding-top: 100px;
-  background: url('../img/Rectangle 2.png') top center/cover;
+  background: url('../img/Rectangle 2.png') top center no-repeat;
   position: relative;
   color: #7D839B;
   font-weight: 500;
@@ -219,7 +218,13 @@ body {
 
 
 .gentle {
-  @extend %container;
+  background: url("../img/Rectangle 11.png") center center/cover;
+
+  .gentlee {
+    @extend %container;
+    padding-top: 100px;
+  }
+
   font-weight: 500;
 
   h2 {
@@ -241,8 +246,74 @@ body {
     margin-top: 119px;
   }
 
-
 }
+
+
+.image-slider {
+  position: relative;
+  display: inline-block;
+}
+
+.image-slider > div {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  overflow: hidden;
+}
+
+
+.image-slider img {
+  display: block;
+  user-select: none;
+  box-sizing: border-box;
+}
+
+
+.image-slider input {
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: -10%;
+  bottom: 10px;
+  height: 100%;
+  width: 120%;
+  background: transparent;
+}
+
+.image-slider input::before {
+  content: '';
+  height: 100%;
+  width: 5px;
+  background: white;
+}
+
+input[type='range'],
+input[type='range']::-webkit-slider-runnable-track,
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  width: 1.5em;
+  height: 1.5em;
+  border: 4px solid #c54895;
+  border-radius: 100%;
+  /* background: #5a308d;*/
+  background: radial-gradient(circle, #812D88 90%, #ED94CA 90%);
+  background-blend-mode: overlay;
+  padding: 3.5em 3.4em;
+  cursor: ew-resize;
+  /* box-shadow: inset 0 -2px 5px rgba(200, 79, 153, 0.5);*/
+}
+
+#top-image {
+  border-right: 4px solid #E7489F;
+  /* box-shadow: inset -2px -2px 5px rgba(200, 79, 153, 0.5), 2px 0 5px rgba(200, 79, 153, 0.5); */
+  /* transition: width 0.1s; */
+}
+
 
 .no-worries {
   font-weight: 500;
@@ -271,6 +342,10 @@ body {
 
 .specifications {
   background: #ffffff;
+
+  .specificationss {
+    @extend %container;
+  }
 
   .features {
     position: relative;
@@ -307,8 +382,19 @@ body {
         h3 {
           color: #7D839B;
         }
+
+        .large {
+          display: none;
+        }
+
+        .mobile {
+          transform: scale(1.5);
+          display: block;
+        }
       }
     }
+
+
   }
 
 
@@ -324,6 +410,34 @@ body {
       color: #7D839B;
     }
 
+    &__table {
+      padding-bottom: 100px;
+
+      ul.leaders {
+        max-width: 40em;
+        padding: 0;
+        overflow-x: hidden;
+        list-style: none
+      }
+
+      ul.leaders li:before {
+        float: left;
+        width: 0;
+        white-space: nowrap;
+        content: ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . "
+      }
+
+      ul.leaders span:first-child {
+        padding-right: 0.33em;
+        background: white
+      }
+
+      ul.leaders span + span {
+        float: right;
+        padding-left: 0.33em;
+        background: white
+      }
+    }
   }
 }
 
@@ -681,8 +795,7 @@ body {
 
 
   .header {
-    background: url("../img/Rectangle 11.png") center center/cover;
-    position: static;;
+    position: static;
 
     &-content {
       padding-top: 200px;
@@ -775,7 +888,7 @@ body {
       top: -10px;
 
       img {
-        width: 80px;
+        width: 40%;
       }
 
       .feature__item {
@@ -789,12 +902,43 @@ body {
       font-size: 2.4rem;
       padding-top: 90px;
       padding-bottom: 70px;
+
+      &__table {
+        ul.leaders {
+          max-width: 40em;
+          padding: 0;
+          overflow-x: hidden;
+          list-style: none
+        }
+
+        ul.leaders li:before {
+          display: none;
+        }
+
+        ul.leaders span:first-child {
+          padding-right: 0.33em;
+          background: white
+        }
+
+        ul.leaders span + span {
+          float: right;
+          padding-left: 0.33em;
+          background: white
+        }
+      }
     }
   }
 
   .gallery {
     .grid-container {
       display: flex;
+      height: 320px;
+    }
+
+    img {
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
     }
   }
 
@@ -1130,6 +1274,18 @@ body {
 }
 
 
+@media (max-width: 380px) {
+  .specifications {
+    &-content {
+      &__table {
+        font-size: 2rem;
+      }
+    }
+  }
+
+
+}
+
 .icv__arrow-wrapper {
   display: none !important;
 }
@@ -1151,4 +1307,15 @@ body {
 
 .icv__control {
   height: calc(100% + 35px) !important;
+}
+
+
+.policy {
+  @extend %container;
+  padding-top: 100px;
+
+  p {
+    margin: 3rem 0;
+  }
+;
 }
