--- a/css/main.scss
+++ b/css/main.scss
@@ -391,6 +391,10 @@ input[type="range"]::-webkit-slider-thumb {
           transform: scale(1.5);
           display: block;
         }
+
+        .dd {
+          display: block;
+        }
       }
     }
 
@@ -1317,5 +1321,7 @@ input[type="range"]::-webkit-slider-thumb {
   p {
     margin: 3rem 0;
   }
-;
+
 }
+
+
