--- a/css/main.css
+++ b/css/main.css
@@ -1036,7 +1036,8 @@ input[type=range]::-webkit-slider-thumb {
   padding-top: 100px;
 }
 .policy p {
-  margin: 3rem 0;
+  margin: 2.5rem 0;
+  font-size: 1.8rem;
 }
 
 /*# sourceMappingURL=main.css.map */
