--- a/css/main.scss
+++ b/css/main.scss
@@ -1319,7 +1319,8 @@ input[type="range"]::-webkit-slider-thumb {
   padding-top: 100px;
 
   p {
-    margin: 3rem 0;
+    margin: 2.5rem 0;
+    font-size: 1.8rem;
   }
 
 }
