--- a/css/main.css
+++ b/css/main.css
@@ -1034,6 +1034,7 @@ input[type=range]::-webkit-slider-thumb {
 
 .policy {
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 .policy p {
   margin: 2.5rem 0;
