--- a/css/main.css
+++ b/css/main.css
@@ -55,10 +55,14 @@ body {
   background: linear-gradient(180deg, rgba(53, 57, 71, 0.3) 0%, rgba(76, 80, 96, 0.3) 100%);
   border: 1px solid rgba(52, 56, 70, 0.5);
   border-radius: 89px;
+  max-height: 90px;
 }
 .nav-logo {
-  width: 55px;
-  height: 70px;
+  height: 90px;
+}
+.nav-logo img {
+  width: 75px;
+  height: 90px;
 }
 .nav-items {
   width: 60%;
@@ -67,14 +71,14 @@ body {
   font-weight: 500;
 }
 .nav .button.button-nav {
-  padding: 10px 40px;
+  padding: 10px 50px;
   background: #0CA074;
   border-radius: 86px;
 }
 
 .header {
   position: relative;
-  bottom: -100px;
+  bottom: -20px;
   background: url("../img/Rectangle 11.png") center center/cover;
 }
 .header-content {
@@ -107,14 +111,15 @@ body {
 }
 
 .interiors {
-  padding-top: 100px;
-  background: url("../img/Rectangle 2.png") top center no-repeat;
+  background: url("../img/Rectangle 2.png") center no-repeat;
+  background-size: contain;
   position: relative;
+  top: -80px;
   color: #7D839B;
   font-weight: 500;
 }
 .interiors-content {
-  padding: 70px 50px;
+  padding: 90px 50px;
 }
 .interiors h2 {
   font-size: 3.6rem;
@@ -123,10 +128,10 @@ body {
 .interiors p {
   margin-top: 10px;
   font-weight: 300;
-  font-size: 1.8rem;
 }
 .interiors .features div {
   padding: 10px;
+  cursor: pointer;
 }
 .interiors .features div p {
   color: #ACB0C1;
@@ -144,9 +149,10 @@ body {
 
 .economy {
   background: url("../img/Rectangle 11.png") center center/cover;
+  position: relative;
 }
 .economy-content {
-  width: 50%;
+  width: 70%;
   padding-top: 150px;
 }
 .economy-content h2 {
@@ -159,13 +165,17 @@ body {
   font-size: 1.8rem;
 }
 .economy .img-md {
-  position: relative;
   width: 100%;
 }
 .economy .img-md img {
   position: absolute;
-  top: -20px;
+  top: -50px;
   width: 100%;
+  left: 58%;
+  min-width: 800px;
+  max-width: 800px;
+  transform: translateX(-40%);
+  z-index: 2;
 }
 .economy .watermark {
   font-weight: 900;
@@ -173,6 +183,9 @@ body {
   line-height: 128.19%;
   text-align: center;
   color: rgba(19, 20, 22, 0.4);
+  position: relative;
+  top: -20px;
+  z-index: 1;
 }
 
 .gentle {
@@ -264,7 +277,8 @@ input[type=range]::-webkit-slider-thumb {
 .no-worries {
   font-weight: 500;
   padding: 300px 0;
-  background: url("../img/image 13.png") center/cover no-repeat;
+  margin: 100px 0 0;
+  background: url("../img/image 13.png") right 0 bottom no-repeat;
 }
 .no-worries h2 {
   font-size: 3.6rem;
@@ -304,7 +318,7 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
   box-shadow: 0px 10px 30px rgba(186, 190, 206, 0.8);
   border-radius: 20px;
-  padding: 30px;
+  padding: 30px 35px;
   background: #ffffff;
   cursor: pointer;
 }
@@ -639,7 +653,7 @@ input[type=range]::-webkit-slider-thumb {
     position: static;
   }
   .header-content {
-    padding-top: 200px;
+    padding-top: 45px;
   }
   .header .mobile-img {
     height: 40vh;
@@ -658,13 +672,11 @@ input[type=range]::-webkit-slider-thumb {
     background: #ffffff;
   }
   .interiors-content {
-    padding: 0 30px;
-    padding-bottom: 70px;
+    padding: 50px 30px;
   }
 
   .economy {
-    padding-top: 70px;
-    padding-bottom: 120px;
+    padding-bottom: 70px;
   }
   .economy-content {
     width: 100%;
@@ -674,6 +686,9 @@ input[type=range]::-webkit-slider-thumb {
     font-size: 3rem;
   }
 
+  .gentle .gentlee {
+    padding-top: 54px;
+  }
   .gentle h2 {
     font-size: 3.6rem;
   }
@@ -951,7 +966,7 @@ input[type=range]::-webkit-slider-thumb {
   }
 
   .faq {
-    padding: 200px 15px;
+    padding: 50px 15px;
   }
   .faq .questions {
     width: 100%;
@@ -1027,10 +1042,7 @@ input[type=range]::-webkit-slider-thumb {
   border: 6px solid #FFFFFF !important;
   box-shadow: 0px 0px 25px rgba(249, 177, 51, 0.3) !important;
   z-index: 1000;
-}
-
-.icv__control {
-  height: calc(100% + 35px) !important;
+  display: none;
 }
 
 .policy {
