--- a/css/main.scss
+++ b/css/main.scss
@@ -57,10 +57,15 @@ body {
   background: linear-gradient(180deg, rgba(53, 57, 71, 0.3) 0%, rgba(76, 80, 96, 0.3) 100%);
   border: 1px solid rgba(52, 56, 70, 0.5);
   border-radius: 89px;
+  max-height: 90px;
 
   &-logo {
-    width: 55px;
-    height: 70px;
+    height: 90px;
+
+    img {
+      width: 75px;
+      height: 90px;
+    }
   }
 
   &-items {
@@ -72,7 +77,7 @@ body {
   }
 
   .button.button-nav {
-    padding: 10px 40px;
+    padding: 10px 50px;
     background: #0CA074;
     border-radius: 86px;
   }
@@ -80,7 +85,7 @@ body {
 
 .header {
   position: relative;
-  bottom: -100px;
+  bottom: -20px;
   background: url("../img/Rectangle 11.png") center center/cover;
 
   .headerr {
@@ -126,12 +131,13 @@ body {
 .interiors {
   &-content {
     @extend %container;
-    padding: 70px 50px;
+    padding: 90px 50px;
   }
 
-  padding-top: 100px;
-  background: url('../img/Rectangle 2.png') top center no-repeat;
+  background: url('../img/Rectangle 2.png') center no-repeat;
+  background-size: contain;
   position: relative;
+  top: -80px;
   color: #7D839B;
   font-weight: 500;
 
@@ -143,13 +149,13 @@ body {
   p {
     margin-top: 10px;
     font-weight: 300;
-    font-size: 1.8rem;
   }
 
 
   .features {
     div {
       padding: 10px;
+      cursor: pointer;
 
       p {
         color: #ACB0C1;
@@ -175,13 +181,14 @@ body {
 
 .economy {
   background: url("../img/Rectangle 11.png") center center/cover;
+  position: relative;
 
   .economyy {
     @extend %container;
   }
 
   &-content {
-    width: 50%;
+    width: 70%;
     padding-top: 150px;
 
     h2 {
@@ -197,13 +204,17 @@ body {
   }
 
   .img-md {
-    position: relative;
     width: 100%;
 
     img {
       position: absolute;
-      top: -20px;
+      top: -50px;
       width: 100%;
+      left: 58%;
+      min-width: 800px;
+      max-width: 800px;
+      transform: translateX(-40%);
+      z-index: 2;
     }
   }
 
@@ -213,6 +224,9 @@ body {
     line-height: 128.19%;
     text-align: center;
     color: rgba(19, 20, 22, 0.4);
+    position: relative;
+    top: -20px;
+    z-index: 1;
   }
 
 }
@@ -319,7 +333,8 @@ input[type="range"]::-webkit-slider-thumb {
 .no-worries {
   font-weight: 500;
   padding: 300px 0;
-  background: url("../img/image 13.png") center/cover no-repeat;
+  margin: 100px 0 0;
+  background: url("../img/image 13.png") right 0 bottom no-repeat;
 
   .no-worreiss {
     @extend %container;
@@ -373,7 +388,7 @@ input[type="range"]::-webkit-slider-thumb {
       position: relative;
       box-shadow: 0px 10px 30px rgba(186, 190, 206, 0.8);
       border-radius: 20px;
-      padding: 30px;
+      padding: 30px 35px;
       background: #ffffff;
       cursor: pointer;
 
@@ -803,7 +818,7 @@ input[type="range"]::-webkit-slider-thumb {
     position: static;
 
     &-content {
-      padding-top: 200px;
+      padding-top: 45px;
     }
 
     .mobile-img {
@@ -825,8 +840,7 @@ input[type="range"]::-webkit-slider-thumb {
 
   .interiors {
     &-content {
-      padding: 0 30px;
-      padding-bottom: 70px;
+      padding: 50px 30px;
     }
 
     background: #ffffff;
@@ -834,8 +848,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 
   .economy {
-    padding-top: 70px;
-    padding-bottom: 120px;
+    padding-bottom: 70px;
 
     &-content {
       width: 100%;
@@ -848,6 +861,9 @@ input[type="range"]::-webkit-slider-thumb {
   }
 
   .gentle {
+    .gentlee{
+      padding-top: 54px;
+    }
     h2 {
       font-size: 3.6rem;
     }
@@ -1207,7 +1223,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 
   .faq {
-    padding: 200px 15px;
+    padding: 50px 15px;
 
     .questions {
       width: 100%;
@@ -1308,10 +1324,11 @@ input[type="range"]::-webkit-slider-thumb {
   border: 6px solid #FFFFFF !important;
   box-shadow: 0px 0px 25px rgba(249, 177, 51, 0.3) !important;
   z-index: 1000;
+  display: none;
 }
 
 .icv__control {
-  height: calc(100% + 35px) !important;
+  //height: calc(100% + 35px) !important;
 }
 
 
