--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ body {
 .economy {
   background: url("../img/Rectangle 11.png") center center/cover;
   position: relative;
+  top: -100px;
 }
 .economy-content {
   width: 70%;
@@ -677,6 +678,7 @@ input[type=range]::-webkit-slider-thumb {
 
   .economy {
     padding-bottom: 70px;
+    top: 0;
   }
   .economy-content {
     width: 100%;
