--- a/css/main.scss
+++ b/css/main.scss
@@ -182,6 +182,7 @@ body {
 .economy {
   background: url("../img/Rectangle 11.png") center center/cover;
   position: relative;
+  top: -100px;
 
   .economyy {
     @extend %container;
@@ -849,6 +850,7 @@ input[type="range"]::-webkit-slider-thumb {
 
   .economy {
     padding-bottom: 70px;
+    top: 0;
 
     &-content {
       width: 100%;
@@ -861,9 +863,10 @@ input[type="range"]::-webkit-slider-thumb {
   }
 
   .gentle {
-    .gentlee{
+    .gentlee {
       padding-top: 54px;
     }
+
     h2 {
       font-size: 3.6rem;
     }
