--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,20 @@ a {
   display: inline-block;
 }
 
-.policy, .footer, .faq, .specifications .specificationss, .no-worries .no-worreiss, .gentle .gentlee, .economy .economyy, .header .headerr, .nav {
+.policy, .footer, .faq, .form-section, .specifications .specificationss, .no-worries .no-worreiss, .gentle .gentlee, .economy .economyy, .header .headerr, .nav {
   max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+}
+@media (max-width: 1023px) {
+  .policy, .footer, .faq, .form-section, .specifications .specificationss, .no-worries .no-worreiss, .gentle .gentlee, .economy .economyy, .header .headerr, .nav {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 400px) {
+  .policy, .footer, .faq, .form-section, .specifications .specificationss, .no-worries .no-worreiss, .gentle .gentlee, .economy .economyy, .header .headerr, .nav {
+    padding: 0 15px;
+  }
 }
 
 body {
@@ -78,7 +88,7 @@ body {
 
 .header {
   position: relative;
-  background: url("../img/Rectangle 11.png") center center/cover;
+  background: url("../img/Rectangle 11.png") center center/contain no-repeat;
 }
 .header-content {
   padding-top: 200px;
@@ -175,7 +185,7 @@ body {
 .economy .img-md img {
   position: absolute;
   top: -158px;
-  width: 100%;
+  width: 70%;
   left: 55%;
   max-width: 1000px;
   transform: translateX(-40%);
@@ -351,8 +361,9 @@ input[type=range]::-webkit-slider-thumb {
   color: #ACB0C1;
 }
 .specifications-content h4 {
-  font-weight: 500;
   font-size: 3.6rem;
+  font-weight: 500;
+  line-height: 128.19%;
   text-align: center;
   color: #7D839B;
 }
@@ -360,6 +371,8 @@ input[type=range]::-webkit-slider-thumb {
   padding-bottom: 100px;
 }
 .specifications-content__table ul.leaders {
+  font-size: 4.8rem;
+  line-height: 219.69%;
   max-width: 40em;
   padding: 0;
   overflow-x: hidden;
@@ -410,13 +423,12 @@ input[type=range]::-webkit-slider-thumb {
 .form-section {
   position: relative;
   top: -40px;
+  max-width: 1400px;
   font-size: 1.8rem;
   /* Firefox */
   /* Hide default HTML checkbox */
 }
 .form-section .form-box {
-  margin: 0 auto;
-  width: 95%;
   background: #3A3D49;
   border-radius: 50px;
   padding: 80px 30px 60px;
@@ -593,17 +605,20 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .faq {
-  padding: 200px 0;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .faq h2 {
   font-size: 3.6rem;
   font-weight: 500;
+  line-height: 153.69%;
 }
 .faq .questions {
   width: 90%;
+  font-size: 1.8rem;
 }
 .faq .questions-item {
-  padding: 15px;
+  padding: 25px 15px 25px 30px;
   box-sizing: border-box;
   /* glow */
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -626,7 +641,7 @@ input[type=range]::-webkit-slider-thumb {
   position: absolute;
   display: block;
   content: "+";
-  font-size: 2rem;
+  font-size: 3rem;
   right: 0;
   top: -1rem;
   color: #F9B133;
@@ -636,11 +651,8 @@ input[type=range]::-webkit-slider-thumb {
 }
 .faq .questions-item__title p {
   font-weight: 500;
-  font-size: 1.8rem;
-  text-align: center;
 }
 .faq .questions-item__text {
-  font-size: 1.8rem;
   font-weight: 300;
 }
 
@@ -656,7 +668,7 @@ input[type=range]::-webkit-slider-thumb {
   color: #37ABFF;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
   .header {
     position: static;
   }
@@ -664,16 +676,21 @@ input[type=range]::-webkit-slider-thumb {
     padding-top: 45px;
   }
   .header .mobile-img {
-    height: 40vh;
+    height: 600px;
     margin-top: 40px;
+    justify-content: center;
   }
   .header .mobile-img__header-bg-1 {
-    width: 90%;
-    background: url("../img/R12 1.png") top center/cover;
+    width: 300px;
+    background: url("../img/R12 1.png") top 2vh center/cover;
+    position: relative;
+    right: -25px;
   }
   .header .mobile-img__header-bg-2 {
-    width: 90%;
-    background: url("../img/R12B 1.png") top -3vh center/cover;
+    width: 300px;
+    background: url("../img/R12B 1.png") top -1vh center/cover;
+    position: relative;
+    left: -30px;
   }
 
   .interiors {
@@ -682,19 +699,33 @@ input[type=range]::-webkit-slider-thumb {
   .interiors-content {
     padding: 50px 30px;
   }
+  .interiors p {
+    font-size: 1.8rem;
+  }
 
   .economy {
     padding-bottom: 70px;
-    top: 0;
+    top: -50px;
+    background-size: cover;
   }
   .economy-content {
     width: 100%;
     padding-top: 0;
   }
   .economy-content h2 {
-    font-size: 3rem;
+    font-size: 3.6rem;
+  }
+  .economy .img-md img {
+    width: 60%;
+    left: 64%;
+  }
+  .economy .watermark {
+    font-size: 23rem;
   }
 
+  .gentle {
+    background-size: cover;
+  }
   .gentle .gentlee {
     padding-top: 54px;
   }
@@ -705,7 +736,7 @@ input[type=range]::-webkit-slider-thumb {
     font-weight: 300;
   }
   .gentle h3 {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
   }
   .gentle-change-line {
     margin-top: 0;
@@ -713,7 +744,7 @@ input[type=range]::-webkit-slider-thumb {
 
   .no-worries {
     padding: 100px 0 300px;
-    background: url("../img/image 13.png") bottom/600px no-repeat;
+    background: url("../img/image 13.png") bottom/500px no-repeat;
     text-align: center;
   }
   .no-worries h2 {
@@ -734,10 +765,14 @@ input[type=range]::-webkit-slider-thumb {
     top: -10px;
   }
   .specifications .features img {
-    width: 40%;
+    width: 50%;
   }
   .specifications .features .feature__item:hover {
     top: 0;
+  }
+  .specifications .features .feature__item:hover .mobile {
+    transform: scale(1);
+    display: block;
   }
   .specifications-content {
     font-size: 2.4rem;
@@ -745,6 +780,8 @@ input[type=range]::-webkit-slider-thumb {
     padding-bottom: 70px;
   }
   .specifications-content__table ul.leaders {
+    margin-top: 35px;
+    font-size: 2.4rem;
     max-width: 40em;
     padding: 0;
     overflow-x: hidden;
@@ -977,8 +1014,16 @@ input[type=range]::-webkit-slider-thumb {
   .faq {
     padding: 50px 15px;
   }
+  .faq h2 {
+    width: 72%;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .faq .questions {
     width: 100%;
+  }
+  .faq .questions-item {
+    padding: 30px;
   }
   .faq .questions-item__title-question {
     width: 100%;
@@ -1029,7 +1074,52 @@ input[type=range]::-webkit-slider-thumb {
     color: white;
   }
 }
+@media (max-width: 568px) {
+  .header {
+    position: static;
+  }
+  .header-content {
+    padding-top: 45px;
+  }
+  .header .mobile-img {
+    margin-top: 40px;
+    height: 400px;
+  }
+  .header .mobile-img__header-bg-1 {
+    width: 180px;
+    background: url("../img/R12 1.png") top 2vh center/cover;
+    position: relative;
+    right: -15px;
+  }
+  .header .mobile-img__header-bg-2 {
+    width: 180px;
+    background: url("../img/R12B 1.png") top -1vh center/cover;
+    position: relative;
+    left: -20px;
+  }
+}
 @media (max-width: 380px) {
+  .header .mobile-img {
+    margin-top: 40px;
+    height: 380px;
+  }
+  .header .mobile-img__header-bg-1 {
+    width: 180px;
+    background: url("../img/R12 1.png") top 2vh center/cover;
+    position: relative;
+    right: -15px;
+  }
+  .header .mobile-img__header-bg-2 {
+    width: 180px;
+    background: url("../img/R12B 1.png") top -1vh center/cover;
+    position: relative;
+    left: -20px;
+  }
+
+  .specifications-content__table ul.leaders {
+    font-size: 2rem;
+  }
+
   .specifications-content__table {
     font-size: 2rem;
   }
