--- a/css/main.scss
+++ b/css/main.scss
@@ -440,7 +440,9 @@ input[type="range"]::-webkit-slider-thumb {
 
     &__table {
       padding-bottom: 100px;
-
+      max-width: 980px;
+      margin-right: auto;
+      margin-left: auto;
       ul.leaders {
         font-size: 4.8rem;
         line-height: 219.69%;
@@ -942,7 +944,6 @@ input[type="range"]::-webkit-slider-thumb {
         width: 50%;
       }
 
-
       .feature__item {
         &:hover {
           top: 0;
@@ -970,9 +971,6 @@ input[type="range"]::-webkit-slider-thumb {
           list-style: none
         }
 
-        ul.leaders li:before {
-          display: none;
-        }
 
         ul.leaders span:first-child {
           padding-right: 0.33em;
@@ -1335,7 +1333,6 @@ input[type="range"]::-webkit-slider-thumb {
   }
 }
 
-
 @media (max-width: 568px) {
   .header {
     position: static;
@@ -1364,9 +1361,7 @@ input[type="range"]::-webkit-slider-thumb {
     }
   }
 
-
 }
-
 
 @media (max-width: 380px) {
   .header {
@@ -1390,7 +1385,7 @@ input[type="range"]::-webkit-slider-thumb {
     }
   }
 
-  .specifications-content__table ul.leaders{
+  .specifications-content__table ul.leaders {
     font-size: 2rem;
   }
   .specifications {
